[gd_scene load_steps=12 format=3 uid="uid://cmufyiqrxdytk"]

[ext_resource type="Script" path="res://world.gd" id="1_8iqcw"]
[ext_resource type="PackedScene" uid="uid://31o6jcmhsha1" path="res://UI/control.tscn" id="1_y3ehh"]
[ext_resource type="PackedScene" uid="uid://det37wbxbg7mw" path="res://player_1.tscn" id="3_e5d6l"]
[ext_resource type="PackedScene" uid="uid://dls2tjycipxma" path="res://Maps/map_1.tscn" id="3_ls8rr"]
[ext_resource type="PackedScene" uid="uid://ddhye8ydff3ki" path="res://Maps/map_2.tscn" id="4_85vmd"]
[ext_resource type="PackedScene" uid="uid://30k57lqh4cyh" path="res://player_2.tscn" id="4_qmc5u"]
[ext_resource type="PackedScene" uid="uid://drdf0f4kmh2b1" path="res://Maps/map_3.tscn" id="5_xnc8l"]
[ext_resource type="PackedScene" uid="uid://miuefano325x" path="res://Maps/map_4.tscn" id="6_tufqa"]
[ext_resource type="PackedScene" uid="uid://deblmjgyxsegn" path="res://Maps/map_5.tscn" id="7_wbuhv"]
[ext_resource type="PackedScene" uid="uid://doyrll03cr2fa" path="res://attack_1.tscn" id="10_xaabo"]
[ext_resource type="PackedScene" uid="uid://ckxvfcgnxeygv" path="res://attack_2.tscn" id="11_nmq3p"]

[node name="World" type="Node2D"]
script = ExtResource("1_8iqcw")

[node name="Control" parent="." instance=ExtResource("1_y3ehh")]
offset_right = 1040.0
offset_bottom = 754.0

[node name="Map1" parent="." instance=ExtResource("3_ls8rr")]

[node name="Map2" parent="." instance=ExtResource("4_85vmd")]

[node name="Map3" parent="." instance=ExtResource("5_xnc8l")]

[node name="Map4" parent="." instance=ExtResource("6_tufqa")]

[node name="Map5" parent="." instance=ExtResource("7_wbuhv")]

[node name="Player1" parent="." instance=ExtResource("3_e5d6l")]
position = Vector2(177, 5000)

[node name="Player2" parent="." instance=ExtResource("4_qmc5u")]
position = Vector2(520, 5000)

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(380, 222)
limit_left = -297
limit_top = -279
limit_right = 1053
limit_bottom = 733

[node name="Attack1" parent="." instance=ExtResource("10_xaabo")]

[node name="Attack2" parent="." instance=ExtResource("11_nmq3p")]
